--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # User specific & automatically generated files #
 #################################################
 /less
-
+/download
 
 # IDE and editor specific files #
 #################################
